--- a/index.html
+++ b/index.html
@@ -151,6 +151,8 @@
             align-items: center;
             justify-content: center;
             z-index: 1000;
+            overflow-y: auto;
+            padding: 24px;
             opacity: 0;
             visibility: hidden;
             pointer-events: none;
@@ -169,10 +171,14 @@
             background: var(--color-white);
             width: 90%;
             max-width: 440px;
+            max-height: 90vh;
+            overflow-y: auto;
             padding: 48px 40px 40px;
             position: relative;
             transform: translateY(20px);
             transition: transform 0.4s ease;
+            margin: auto;
+            flex-shrink: 0;
         }
 
         .modal-overlay.is-active .modal {
